{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 497,
  "lineage": "67a99657-8d69-13d6-bd07-c49b61295fc5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip_elastic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02571a98889930b23",
            "domain": "vpc",
            "id": "eipalloc-02571a98889930b23",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-107-21-22-152.compute-1.amazonaws.com",
            "public_ip": "107.21.22.152",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a1f0fabf7af23b3",
            "domain": "vpc",
            "id": "eipalloc-07a1f0fabf7af23b3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-225-7-100.compute-1.amazonaws.com",
            "public_ip": "34.225.7.100",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip_elastic_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e824e325103aeed",
            "domain": "vpc",
            "id": "eipalloc-01e824e325103aeed",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-213-36-179.compute-1.amazonaws.com",
            "public_ip": "44.213.36.179",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_Gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:internet-gateway/igw-0242b11b2326079c2",
            "id": "igw-0242b11b2326079c2",
            "owner_id": "046746486277",
            "tags": {
              "Name": "Internet-GTW"
            },
            "tags_all": {
              "Name": "Internet-GTW"
            },
            "vpc_id": "vpc-00d9cb0a0a9b0e44b"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02571a98889930b23",
            "connectivity_type": "public",
            "id": "nat-0c18dd4ee7936de92",
            "network_interface_id": "eni-0eaa11b955d3e4d15",
            "private_ip": "10.0.4.63",
            "public_ip": "107.21.22.152",
            "subnet_id": "subnet-085996c3e3845ad51",
            "tags": {
              "Name": "NAT_Internet-gw"
            },
            "tags_all": {
              "Name": "NAT_Internet-gw"
            }
          },
          "dependencies": [
            "aws_eip.ip_elastic",
            "aws_internet_gateway.Internet_Gw",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a1f0fabf7af23b3",
            "connectivity_type": "public",
            "id": "nat-0e6610bed24335ddc",
            "network_interface_id": "eni-0c46cd3db9b01f4cf",
            "private_ip": "10.0.5.199",
            "public_ip": "34.225.7.100",
            "subnet_id": "subnet-0a49b93eacabf1e5a",
            "tags": {
              "Name": "NAT_Internet-gw"
            },
            "tags_all": {
              "Name": "NAT_Internet-gw"
            }
          },
          "dependencies": [
            "aws_eip.ip_elastic",
            "aws_internet_gateway.Internet_Gw",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "multi-ip_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:network-interface/eni-09d2a59a0a88cefb3",
            "id": "eni-09d2a59a0a88cefb3",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:db:51:00:de:6d",
            "owner_id": "046746486277",
            "private_dns_name": "ip-10-0-1-9.ec2.internal",
            "private_ip": "10.0.1.9",
            "private_ip_list": [
              "10.0.1.9"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.9"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a987dcdb1b45ea85"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e6cfb66782368415"
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-Subnet-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:route-table/rtb-0191412b3da86e46f",
            "id": "rtb-0191412b3da86e46f",
            "owner_id": "046746486277",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0242b11b2326079c2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT for Internet GW"
            },
            "tags_all": {
              "Name": "RT for Internet GW"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d9cb0a0a9b0e44b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet_Gw",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-Subnet-RT_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:route-table/rtb-0059bfe7c8b93345c",
            "id": "rtb-0059bfe7c8b93345c",
            "owner_id": "046746486277",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0242b11b2326079c2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT for Internet GW_2"
            },
            "tags_all": {
              "Name": "RT for Internet GW_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d9cb0a0a9b0e44b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet_Gw",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fa3d73851dab542",
            "route_table_id": "rtb-0191412b3da86e46f",
            "subnet_id": "subnet-0e6cfb66782368415"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gw",
            "aws_route_table.Public-Subnet-RT",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ff215b60b436e90",
            "route_table_id": "rtb-0059bfe7c8b93345c",
            "subnet_id": "subnet-098d336900072fed1"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gw",
            "aws_route_table.Public-Subnet-RT_2",
            "aws_subnet.public_subnets_2",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:security-group/sg-0ec2bdb0b61984035",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0ec2bdb0b61984035",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "179.125.29.146/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              }
            ],
            "name": "terraform-20221129173136272500000001",
            "name_prefix": "terraform-",
            "owner_id": "046746486277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "GRUPOSEC_1"
            },
            "tags_all": {
              "Name": "GRUPOSEC_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d9cb0a0a9b0e44b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:subnet/subnet-0d7a01406db96ba9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7a01406db96ba9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "046746486277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB Subnet 1"
            },
            "tags_all": {
              "Name": "DB Subnet 1"
            },
            "vpc_id": "vpc-00d9cb0a0a9b0e44b"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:subnet/subnet-0b34220bedc2cdff3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b34220bedc2cdff3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "046746486277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB Subnet 2"
            },
            "tags_all": {
              "Name": "DB Subnet 2"
            },
            "vpc_id": "vpc-00d9cb0a0a9b0e44b"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:subnet/subnet-085996c3e3845ad51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085996c3e3845ad51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "046746486277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-00d9cb0a0a9b0e44b"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:subnet/subnet-0a49b93eacabf1e5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a49b93eacabf1e5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "046746486277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-00d9cb0a0a9b0e44b"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:subnet/subnet-0e6cfb66782368415",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6cfb66782368415",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "046746486277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet_1"
            },
            "tags_all": {
              "Name": "Public Subnet_1"
            },
            "vpc_id": "vpc-00d9cb0a0a9b0e44b"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:subnet/subnet-098d336900072fed1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098d336900072fed1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "046746486277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet_2"
            },
            "tags_all": {
              "Name": "Public Subnet_2"
            },
            "vpc_id": "vpc-00d9cb0a0a9b0e44b"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046746486277:vpc/vpc-00d9cb0a0a9b0e44b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02621529fb4fc0d16",
            "default_route_table_id": "rtb-051051011cb5b166e",
            "default_security_group_id": "sg-0a987dcdb1b45ea85",
            "dhcp_options_id": "dopt-00220604139ac1609",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00d9cb0a0a9b0e44b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-051051011cb5b166e",
            "owner_id": "046746486277",
            "tags": {
              "Name": "vpc_cluster"
            },
            "tags_all": {
              "Name": "vpc_cluster"
            }
          }
        }
      ]
    }
  ]
}